[tool.poetry]
name = "py-infraflow-runtime-aws"
version = "0.1.2"
description = "Build Event Based and Microservice infrastructure and connections using these reusable AWS+Boto3 patterns"
authors = ["Matthew Beatty <infraflow@upcontent.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "infraflow"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.5.1"
boto3 = "^1.26.93"
pydantic = "^2.1.1"
#aws-wsgi = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
